fixes issue with z-indexing of banner

--- a/src/Components/TopBanner/TopBanner.scss
+++ b/src/Components/TopBanner/TopBanner.scss
@@ -82,6 +82,7 @@
     left     : 0;
     right    : 0;
     margin   : auto;
+    z-index: 3;
 
     .mouse {
       border       : 3px solid white;
